--- a/src/components/alatorio/Alatorio.module.css
+++ b/src/components/alatorio/Alatorio.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
+    padding-bottom: 15px;
   }
   
   .contColor {
